<resources>
    <string name="app_name">My Devices</string>
    <string name="model">Modelo</string>
    <string name="get">Usar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="registry">Cadastrar</string>
    <string name="put_name">Digite o seu nome</string>
    <string name="continue_button">Continuar</string>

    <string name="auth_failed">Usuario invalido</string>
    <string name="nothing_digited">Digite um nome</string>

    <string name="a5_text">Galaxy A5</string>
    <string name="k4_text">LG K4</string>
    <string name="g1_text">Motorola G1</string>
    <string name="xa_text">Sony Xperia XA</string>

    <string name="available">Dísponível</string>
    <string name="unavailable">Indisponível</string>

    <string name="used_text">Ultimo uso:</string>
    <string name="using_text">Em uso:</string>

    <string name="support_model_text">Model:</string>
    <string name="support_id_text">ID:</string>
    <string name="support_status_text">Status:</string>
    <string name="support_user_text">Usuário:</string>

    <string name="processing_text">Processando...</string>
    <string name="second_name">Sobrenome</string>
    <string name="name">Nome</string>
    <string name="start">Inicio:</string>
    <string name="end">Fim:</string>
    <string name="list_last_usages_text">Lista de últimos usos</string>


</resources>
