<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="com.rfp.dvp.mydevices.DeviceInformationActivity">


    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="150dp"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/device_information_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/model_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_layout">

        <TextView
            android:id="@+id/support_model_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_model_text"/>

        <TextView
            android:id="@+id/model_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/model_layout">

        <TextView
            android:id="@+id/support_id_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_id_text"/>

        <TextView
            android:id="@+id/id_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/id_layout">

        <TextView
            android:id="@+id/support_status_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_status_text"/>

        <TextView
            android:id="@+id/status_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/status_layout">

        <TextView
            android:id="@+id/support_user_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_user_text"/>

        <TextView
            android:id="@+id/user_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
